test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/pass_alloced_memory.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[6]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: calloc
        List[2]: 
          TIdentifier: nmemb
          TIdentifier: size
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            ULong: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: memset
        List[3]: 
          TIdentifier: s
          TIdentifier: c
          TIdentifier: n
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[3]: 
            Pointer: 
              Void: 
            Int: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: free
        List[1]: 
          TIdentifier: ptr
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Void: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_100_zeroed_bytes
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: calloc
                  List[2]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 100
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: fill_100_bytes
        List[2]: 
          TIdentifier: pointer
          TIdentifier: byte
        CB: 
          List[1]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: memset
                  List[3]: 
                    CVar: 
                      TIdentifier: pointer
                      None: 
                    CVar: 
                      TIdentifier: byte
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 100
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Pointer: 
              Void: 
            Int: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: free_bytes
        List[1]: 
          TIdentifier: ptr
        CB: 
          List[1]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: free
                  List[1]: 
                    CVar: 
                      TIdentifier: ptr
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Void: 
          Void: 
        None: 
